Cleaned up the reviews component some more and fixed the text wrap issue

--- a/ride-for-life/src/components/Users/Users.css
+++ b/ride-for-life/src/components/Users/Users.css
@@ -44,6 +44,7 @@
 }
 
 #dropdown-item {
+    white-space: normal;
     width: 100%;
     color: black;
 }
